# Spec2GB

./: .gitignore  LICENSE  README.md  TODO.md  memory.regions  mismatch_log.csv  pyproject.toml  requirements.txt  setup.py  spec.yaml  subset_test.gb
.github/workflows/: ci.yml
cosim/: cosim_runner.py  pyboy_harness.py  run_vs_pyboy.py
docs/: cpu_coverage.md
examples/: cpu_microdemo.py  demo_cpu_jump.py  demo_mem_rom_ram.py  demo_ram_fallback.py  mem_cpu_interop.py
generator/: generate.py
generator/prompt_templates/: gameboy_core.j2
prompts/: apu_template.md  cpu_template.md  example_cpu_prompt.md  joypad_template.md  memory_template.md  ppu_template.md  timer_template.md
spec2gb/: pyboy_bridge.c  pyboy_bridge.pyx
tests/: .test_cpu_smoke.py.swp  test_cpu_smoke.py  test_cpu_vs_pyboy.py  test_dummy_generation.py  test_imports.py  test_ly_vs_pyboy.py  test_mem_bounds.py  test_mem_cpu_integration.py  test_timer.py  tests_ppu_regs.py
